--- a/src/main/java/JanelaEmprestimos.form
+++ b/src/main/java/JanelaEmprestimos.form
@@ -10,14 +10,20 @@
     <children>
       <scrollpane id="b74f3" binding="containerEmprestimos">
         <constraints>
-          <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="800" height="-1"/>
+            <preferred-size width="800" height="-1"/>
+            <maximum-size width="800" height="-1"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
           <component id="4c9f0" class="javax.swing.JTable" binding="listaEmprestimos">
             <constraints/>
-            <properties/>
+            <properties>
+              <autoResizeMode value="4"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
