--- a/src/main/java/JanelaHistoricoSocio.form
+++ b/src/main/java/JanelaHistoricoSocio.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaHistoricoSocio">
-  <grid id="27dc6" binding="JanelaHistoricoSocio" layout-manager="GridLayoutManager" row-count="3" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="janelaHistoricoSocio" layout-manager="GridLayoutManager" row-count="3" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="20" y="20" width="800" height="400"/>
@@ -40,7 +40,7 @@
           <text value="Procurar"/>
         </properties>
       </component>
-      <component id="7283f" class="javax.swing.JLabel" binding="Socio">
+      <component id="7283f" class="javax.swing.JLabel" binding="socio">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
