--- a/src/main/java/JanelaReservas.form
+++ b/src/main/java/JanelaReservas.form
@@ -58,7 +58,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="Anular Reserva"/>
+          <text value="Anular Socios.Reserva"/>
         </properties>
       </component>
     </children>
